# vamphost

./: .cirrus.yml  .gitignore  LICENSE.txt  README.rst  inside-docker.sh  pyproject.toml  setup.py
.github/workflows/: test.yml  wheels.yml
ci/: test1.py
native/: PyPluginObject.cpp  PyPluginObject.h  vampyhost.cpp
testci/: test1.py  test2.py
testci/snd/: tuning-fork--A4.flac
vamp/: collect.py
