[build-system]

requires = [
    "setuptools>=42",
    "wheel",
    "numpy>=2.0"
]

build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "pp* *686* *-musllinux_*"


[project]
name = "vamphost"
version = "1.3.2"
dependencies = [
  "numpy",
]

requires-python = ">=3.10"
authors = [
  {name = "Chris Cannam"},
  {name = "George Fazekas"},
]
maintainers = [
  {name = "Eduardo Moguillansky", email = "eduardo.moguillansky@gmail.com"}
]
description = "Use Vamp plugins for audio feature analysis"
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE.txt"]
classifiers = [
	'Development Status :: 4 - Beta',
	'Intended Audience :: Science/Research',
	'Intended Audience :: Developers',
	'Operating System :: MacOS :: MacOS X',
	'Operating System :: Microsoft :: Windows',
	'Operating System :: POSIX',
	'Programming Language :: Python',
	'Programming Language :: Python :: 3',
	'Topic :: Multimedia :: Sound/Audio :: Analysis'
]
